# ziel

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs  ui.rs
logic/: Cargo.toml
logic/src/: board.rs  lib.rs  position.rs  ship.rs
protocol/: Cargo.toml
protocol/src/: client.rs  lib.rs  raw.rs  server.rs
server/: Cargo.toml
server/src/: game.rs  lib.rs  stream.rs
src/: main.rs
tui/: Cargo.toml
tui/src/: draw_ext.rs  lib.rs
