[package]
name = "ziel"
version = "0.1.0"
edition = "2021"

[dependencies]
server = { path = "./server/" }
client = { path = "./client/" }
logic = { path = "./logic/" }
tui = { path = "./tui/" }
tracing-subscriber = "0.3.18"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
clap = { version = "4.5.21", features = ["derive"] }
thiserror = "2.0.3"
